Knife project leaks memory each time a text, curve, or surface object is used for cutting #90791

Closed
opened 2021-08-20 03:36:21 +07:00 by Jesse Yurkovich · 5 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: AMD FirePro W2100 ATI Technologies Inc. 4.5.13493 Core Profile Context FireGL 22.19.693.256

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-19 20:35, hash: 962153dbed
Broken: version: 2.93.2, branch: master, commit date: 2021-08-03 05:58, hash: 1eb06de260
Broken: version: 2.83.16, branch: master, commit date: 2021-06-15 08:46, hash: 051567553d
Worked: n/a

Short description of error
Knife project will leak memory each time a text, curve, or surface object is used as the cutter. Seems to have been broken for quite some time now.

Exact steps for others to reproduce the error
knifeproject-mem.blend

  • Start blender with --debug --debug-memory arguments
  • Load above file
    • Contains a cube in edit mode and 1 of each type of suspect object selected, ready for use as cutters
  • Run Mesh->Knife Project
  • Close blender normally and observe lines like the following
Error: Not freed memory blocks: 3, total unfreed memory 0.005196 MB
Mesh len: 1816 00000240D7101428
Mesh len: 1816 00000240D5E47EF8
Mesh len: 1816 00000240D5E486C8
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: AMD FirePro W2100 ATI Technologies Inc. 4.5.13493 Core Profile Context FireGL 22.19.693.256 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-19 20:35, hash: `962153dbed` Broken: version: 2.93.2, branch: master, commit date: 2021-08-03 05:58, hash: `1eb06de260` Broken: version: 2.83.16, branch: master, commit date: 2021-06-15 08:46, hash: `051567553d` Worked: n/a **Short description of error** Knife project will leak memory each time a text, curve, or surface object is used as the cutter. Seems to have been broken for quite some time now. **Exact steps for others to reproduce the error** [knifeproject-mem.blend](https://archive.blender.org/developer/F10294854/knifeproject-mem.blend) - Start blender with `--debug --debug-memory` arguments - Load above file - Contains a cube in edit mode and 1 of each type of suspect object selected, ready for use as cutters - Run Mesh->Knife Project - Close blender normally and observe lines like the following ``` Error: Not freed memory blocks: 3, total unfreed memory 0.005196 MB Mesh len: 1816 00000240D7101428 Mesh len: 1816 00000240D5E47EF8 Mesh len: 1816 00000240D5E486C8 ```
Poster
Collaborator

Added subscriber: @deadpin

Added subscriber: @deadpin

This issue was referenced by 9eb62b99bc

This issue was referenced by 9eb62b99bc0ac3ccce9fb227c8f3c5d0d66fb975

This issue was referenced by 6be85c0eff

This issue was referenced by 6be85c0effd21f7afd54dcd2047e375bd3d22023

This issue was referenced by a48df97ada

This issue was referenced by a48df97ada85960de4fd0eeba61b32e260bf378c

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Campbell Barton self-assigned this 2021-08-20 07:22:29 +07:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90791
There is no content yet.