Fix T90791: Knife project leaks memory with curve/text cutter