source/blender/editors/mesh/editmesh_knife_project.c
@@ -31,6 +31,7 @@
 #include "BKE_context.h"
 #include "BKE_curve.h"
 #include "BKE_editmesh.h"
+#include "BKE_lib_id.h"
 #include "BKE_mesh.h"
 #include "BKE_mesh_runtime.h"
 #include "BKE_object.h"
@@ -113,7 +114,7 @@ static LinkNode *knifeproject_poly_from_object(const bContext *C,
     BKE_nurbList_free(&nurbslist);
 
     if (me_eval_needs_free) {
-      BKE_mesh_free_data((struct Mesh *)me_eval);
+      BKE_id_free(NULL, (ID *)me_eval);
     }
   }
 
